--- a/ssirTagFinderF4.html
+++ b/ssirTagFinderF4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Web Page Example</title>
+  <title>SSIR Tag Maker</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="SSIR">
+  <meta name="author" content="SSIR Producer">
   <!-- <link rel="stylesheet" href="#"> -->
   <style>
 
